--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@os-team/i18next-react-native-language-detector": "^1.0.34",
+    "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "^4.5.5",
     "@react-navigation/native": "^6.0.2",
