--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "expo-web-browser": "~13.0.3",
     "i18next": "^23.16.4",
     "intl-pluralrules": "^2.0.1",
+    "jotai": "^2.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^15.1.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-colors": "^2.4.0",
+    "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
