fix: allow http requests on android

--- a/app.json
+++ b/app.json
@@ -44,6 +44,7 @@
         "expo-build-properties",
         {
           "android": {
+            "usesCleartextTraffic": true,
             "enableProguardInReleaseBuilds": true,
             "enableShrinkResourceslnReleaseBuilds": true,
             "useLegacyPackaging": true
