--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "expo": "^51.0.0",
+    "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
