--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-keep-awake": "~13.0.2",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.7",
