--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
+    "color": "^4.2.3",
     "expo": "^51.0.0",
     "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.5",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/color": "^4.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
