chore: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yt-music-remote-control",
+  "name": "youtube-music-remote",
   "author": "Franz DC",
   "main": "expo-router/entry",
   "version": "0.1.0",
