chore: disable updates for expo packages in renovate configuration

--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
-  "assignees": [
-    "franz-dc"
-  ],
-  "labels": [
-    "dependencies"
+  "extends": ["config:recommended"],
+  "assignees": ["franz-dc"],
+  "labels": ["dependencies"],
+  "packageRules": [
+    {
+      "matchPackageNames": "^expo",
+      "enabled": false
+    }
   ]
 }
