chore(deps): disable updates for react-native

--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,10 @@
     {
       "matchPackageNames": "^expo",
       "enabled": false
+    },
+    {
+      "matchPackageNames": "^react-native$",
+      "enabled": false
     }
   ]
 }
