feat: use expo-localization for system language detection

--- a/app.json
+++ b/app.json
@@ -58,7 +58,8 @@
             "flipper": true
           }
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
