--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5",
-    "@os-team/i18next-react-native-language-detector": "^1.0.34",
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-community/slider": "^4.5.5",
     "@react-navigation/native": "^6.0.2",
@@ -34,6 +33,7 @@
     "expo-keep-awake": "~13.0.2",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
