chore: update renovate.json to set rangeStrategy to bump

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": ["config:recommended"],
   "assignees": ["franz-dc"],
   "labels": ["dependencies"],
+  "rangeStrategy": "bump",
   "packageRules": [
     {
       "matchPackageNames": ["^expo"],
