--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
   "packageRules": [
     {
       "matchPackageNames": ["^expo"],
-      "enabled": false
+      "allowedVersions": "^51.0.0"
     },
     {
       "matchPackageNames": ["^eslint$"],
