--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
+    "expo-intent-launcher": "~11.0.1",
     "expo-keep-awake": "~13.0.2",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-navigation-bar": "~3.0.7",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -55,7 +58,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "semver": "^7.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -63,6 +67,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.0",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/semver": "^7",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~7.1.2",
     "eslint-config-prettier": "^9.1.0",
