--- a/package.json
+++ b/package.json
@@ -81,5 +81,6 @@
     "react-test-renderer": "18.3.1",
     "typescript": "~5.6.0"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@4.5.1"
 }
