fix(deps): downgrade typescript to v5.3.3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["mmkv", "pressable", "unmute"]
+  "cSpell.words": ["mmkv", "pressable", "unmute"],
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
