chore: update .eslintignore to exclude additional files and directories

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,13 @@
-/.expo
-node_modules
-scripts/*
+node_modules/**
+package.json
+yarn.lock
+ios/**
+android/**
+assets/**
+dist/**
+scripts/**
+.vscode
+.expo-shared
+.prettierrc.json
+.eslintrc.js
+.expo
