fix: eslint config, deps, and affected files

--- a/package.json
+++ b/package.json
@@ -68,9 +68,12 @@
     "@types/react": "~18.3.0",
     "@types/react-test-renderer": "^18.0.7",
     "@types/semver": "^7",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~7.1.2",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
