--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
-  "assignees": ["franz-dc"],
+  "assignees": [],
   "labels": ["dependencies"],
   "packageRules": [
     {
