--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5",
     "@pchmn/expo-material3-theme": "^1.3.2",
-    "@react-native-community/slider": "^4.5.5",
+    "@react-native-community/slider": "4.5.2",
     "@react-navigation/native": "^6.0.2",
-    "@shopify/flash-list": "1.7.2",
+    "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "color": "^4.2.3",
@@ -46,8 +46,8 @@
     "i18next": "^24.0.0",
     "intl-pluralrules": "^2.0.1",
     "jotai": "^2.10.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^15.1.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
@@ -65,7 +65,7 @@
     "@babel/core": "^7.20.0",
     "@types/color": "^4.2.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.0",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.7",
     "@types/semver": "^7",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
@@ -82,7 +82,7 @@
     "jest-expo": "~51.0.3",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.3.1",
-    "typescript": "~5.8.0"
+    "typescript": "~5.3.3"
   },
   "private": true,
   "packageManager": "yarn@4.6.0"
