--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5",
     "@pchmn/expo-material3-theme": "^1.3.2",
-    "@react-native-community/slider": "4.5.2",
+    "@react-native-community/slider": "^4.5.7",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.59.19",
