--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-colors": "^2.4.0",
     "react-native-mmkv": "^2.12.2",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "semver": "^7.6.3"
