--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "YT Music Remote",
     "slug": "youtube-music-remote",
-    "version": "0.4.1",
+    "version": "0.5.0",
     "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -18,7 +18,8 @@
           "NSAllowsArbitraryLoads": true
         }
       },
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.franzdc.youtubemusicremote"
     },
     "android": {
       "adaptiveIcon": {
