--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-tab-view": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "react-use-websocket-lite": "^1.0.1",
     "semver": "^7.6.3"
   },
   "devDependencies": {
